# vitauri

./: .eslintrc  LICENSE  README.md  auto-imports.d.ts  components.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  unocss.config.ts  vite.config.ts  windi.config.ts
src/: App.vue  auto-imports.d.ts  main.ts  shims.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Btn.vue  Output.vue  PageTitle.vue  navbar.vue
src/composables/: useNotification.ts  useShell.ts
src/pages/: command.vue  index.vue  notification.vue
src/router/: index.ts
types/: global.d.ts
